service.yaml
NODEPORT

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      nodePort: 80
  ---
TARGETPORT

apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
